apply plugin: 'com.android.application'
// Google Services plugin
apply plugin: 'com.google.gms.google-services'

android {

    tasks.withType(JavaCompile).configureEach{options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']}

    namespace 'com.Health.Care'

    compileOptions {
        targetCompatibility = "8"
        sourceCompatibility = "8"
    }
    compileSdk 34

    buildToolsVersion '30.0.3'

    defaultConfig {
        applicationId "com.Health.Care"
        minSdkVersion 19
        targetSdkVersion 34
        versionCode 1
        versionName "1.0"
        multiDexEnabled true
        vectorDrawables.useSupportLibrary = true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'androidx.appcompat:appcompat:1.3.0'
    implementation "androidx.legacy:legacy-support-v4:1.0.0"
    implementation "androidx.recyclerview:recyclerview:1.2.1"
    implementation "androidx.viewpager:viewpager:1.0.0"
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    implementation platform("com.google.firebase:firebase-bom:32.7.0")
    implementation 'com.google.firebase:firebase-auth'
    implementation 'com.google.firebase:firebase-database'
    implementation 'com.google.firebase:firebase-core:19.0.0'
    implementation 'com.google.android.gms:play-services-auth:19.2.0'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'com.google.firebase:firebase-firestore:23.0.3'
    implementation 'com.firebaseui:firebase-ui-firestore:8.0.0'
    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.shuhart.stepview:stepview:1.5.1'
    implementation 'com.jaredrummler:material-spinner:1.3.1'
    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
    implementation 'com.jakewharton:butterknife:10.2.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
    implementation 'com.github.d-max:spots-dialog:1.1@aar'
    implementation 'io.paperdb:paperdb:2.7.1'
    implementation 'com.squareup.picasso:picasso:2.5.2'



}
